# wavqvae

./: .gitignore  cv-corpus-12.0-2022-12-07  pyproject.toml
src/wavqvae/: model.py  train.py
