[project]
name = "wavqvae"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "kavorite", email = "kavorite@gmail.com" }
]
requires-python = ">=3.10, <3.13"
dependencies = [
    "fire>=0.7.0",
    "librosa>=0.10.2.post1",
    "polars>=1.23.0",
    "rich>=13.9.4",
    "torch>=2.6.0",
]

[project.scripts]
train = "wavqvae.train:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
